--- a/gradle/Dockerfile
+++ b/gradle/Dockerfile
@@ -1,12 +1,12 @@
-FROM kubespheredev/builder-base:v3.1.0
+FROM nodew/builder-base:v1.0.0
 
 # java
-ENV JAVA_VERSIOIN 1.8.0
-RUN yum install -y java-${JAVA_VERSIOIN}-openjdk-devel java-${JAVA_VERSIOIN}-openjdk-devel.i686 && \
-    yum -y clean all
+# ENV JAVA_VERSIOIN 21
+# RUN yum install -y java-${JAVA_VERSIOIN}-openjdk-devel && \
+#     yum -y clean all
 
-# gradle6
-ENV GRADLE_VERSION 6.9.1
+# gradle
+ENV GRADLE_VERSION 8.9
 ENV GRADLE_HOME /usr/local/gradle-${GRADLE_VERSION}
 ENV PATH ${GRADLE_HOME}/bin:$PATH
 
@@ -15,9 +15,8 @@ RUN curl -fSL https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}
     unzip -q gradle.zip -d /usr/local && \
     rm -f gradle.zip
 
-# Set JDK to be 32bit
-COPY set_java $GRADLE_HOME
-RUN $GRADLE_HOME/set_java && \
-    rm -f $GRADLE_HOME/set_java
+# COPY set_java $GRADLE_HOME
+# RUN $GRADLE_HOME/set_java && \
+#     rm -f $GRADLE_HOME/set_java
 
 CMD ["gradle","--version"]
