--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   BuildBase:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: Build base agent
@@ -29,7 +29,7 @@ jobs:
 
   BuildGo:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build Go agent
@@ -42,62 +42,62 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "GOLANG_VERSION=1.12.10"
-  BuildGo16:
+        build-args: "GOLANG_VERSION=1.22.5"
+  BuildGo20:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
-    - name: Build Go 1.16 agent
+    - name: Build Go 1.20 agent
       uses: ./.github/actions/build
       with:
         context: go
         dockerfile: go/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.16
+        tag-suffix: -1.20
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "GOLANG_VERSION=1.16.8"
-  BuildGo17:
+        build-args: "GOLANG_VERSION=1.20.14"
+  BuildGo21:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
-    - name: Build Go 1.17 agent
+    - name: Build Go 1.21 agent
       uses: ./.github/actions/build
       with:
         context: go
         dockerfile: go/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.17
+        tag-suffix: -1.21
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "GOLANG_VERSION=1.17.8"
-  BuildGo18:
+        build-args: "GOLANG_VERSION=1.21.12"
+  BuildGo22:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
-    - name: Build Go 1.18 agent
+    - name: Build Go 1.22 agent
       uses: ./.github/actions/build
       with:
         context: go
         dockerfile: go/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.18
+        tag-suffix: -1.22
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "GOLANG_VERSION=1.18"
+        build-args: "GOLANG_VERSION=1.22.5"
 
   BuildMaven:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build maven agent
@@ -110,10 +110,12 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "JDK_VERSION=1.8.0"
+        build-args: |
+          "JDK_VERSION=17"
+          "JDK_HOME=/usr/java/default"
   BuildMavenJDK11:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build maven(JDK11) agent
@@ -130,7 +132,7 @@ jobs:
         build-args: "JDK_VERSION=11"
   BuildMavenJDK17:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: Build maven(JDK17) agent
@@ -147,10 +149,29 @@ jobs:
           build-args: |
             "JDK_VERSION=17"
             "JDK_HOME=/usr/java/default"
+  BuildMavenJDK21:
+    needs: BuildBase
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build maven(JDK21) agent
+        uses: ./.github/actions/build
+        with:
+          context: maven
+          dockerfile: maven/Dockerfile
+          image-name: builder-maven
+          tag-suffix: -jdk21
+          platforms: linux/amd64,linux/arm64
+          docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
+          docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
+          ghcr-token: ${{ secrets.GHCR_TOKEN }}
+          build-args: |
+            "JDK_VERSION=17"
+            "JDK_HOME=/usr/java/default"
 
   BuildGradle:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build Gradle agent
@@ -166,7 +187,7 @@ jobs:
 
   BuildNodeJs:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build NodeJS agent
@@ -179,10 +200,49 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: |
+          "NODE_VERSION=20.15.1"
+          "NEW_COREPACK=true"
+  BuildNodeJs18:
+    needs: BuildBase
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build NodeJS 18 LTS agent
+      uses: ./.github/actions/build
+      with:
+        context: nodejs
+        dockerfile: nodejs/Dockerfile
+        image-name: builder-nodejs
+        tag-suffix: -18
+        platforms: linux/amd64,linux/arm64
+        docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
+        docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
+        ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: "NODE_VERSION=18.18.1"
+  BuildNodeJs20:
+    needs: BuildBase
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build NodeJS 20 LTS agent
+      uses: ./.github/actions/build
+      with:
+        context: nodejs
+        dockerfile: nodejs/Dockerfile
+        image-name: builder-nodejs
+        tag-suffix: -20
+        platforms: linux/amd64,linux/arm64
+        docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
+        docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
+        ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: |
+          "NODE_VERSION=20.15.1"
+          "NEW_COREPACK=true"
 
   BuildDotnet:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build DotNet agent
@@ -195,10 +255,45 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: "DOTNET_VERSION=8.0"
+  BuildDotnet6:
+    needs: BuildBase
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build DotNet 6.0 agent
+      uses: ./.github/actions/build
+      with:
+        context: dotnet
+        dockerfile: dotnet/Dockerfile
+        image-name: builder-dotnet
+        tag-suffix: -6
+        platforms: linux/amd64,linux/arm64
+        docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
+        docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
+        ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: "DOTNET_VERSION=6.0"
+  BuildDotnet8:
+    needs: BuildBase
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build DotNet 8.0 agent
+      uses: ./.github/actions/build
+      with:
+        context: dotnet
+        dockerfile: dotnet/Dockerfile
+        image-name: builder-dotnet
+        tag-suffix: -8
+        platforms: linux/amd64,linux/arm64
+        docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
+        docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
+        ghcr-token: ${{ secrets.GHCR_TOKEN }}
+        build-args: "DOTNET_VERSION=8.0"
 
   BuildPython:
     needs: BuildBase
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: Build Python agent
