--- a/maven/podman/Dockerfile
+++ b/maven/podman/Dockerfile
@@ -1,23 +1,14 @@
-FROM kubespheredev/builder-base:v3.1.0-podman
+FROM nodew/builder-base:v1.0.0-podman
 
-ARG JDK_VERSION 1.8.0
-ARG JDK_HOME /usr/lib/jvm/java-${JDK_VERSION}-openjdk
+ARG JDK_VERSION=1.8.0
+ARG JDK_HOME=/usr/lib/jvm/java-${JDK_VERSION}-openjdk
 
 # java
 ENV JAVA_VERSION $JDK_VERSION
 
-RUN if [ "x${JAVA_VERSION}" = "x17" ]; then \
-      ARCH= && uArch="$(uname -m)" \
-        && case "${uArch##*-}" in \
-          x86_64) ARCH='x64';; \
-          aarch64) ARCH='aarch64';; \
-          *) echo "unsupported architecture"; exit 1 ;; \
-        esac \
-      && wget https://download.oracle.com/java/${JAVA_VERSION}/latest/jdk-${JAVA_VERSION}_linux-${ARCH}_bin.rpm \
-      && rpm -ivh jdk-${JAVA_VERSION}_linux-${ARCH}_bin.rpm; \
-    else \
-      yum install -y java-${JAVA_VERSION}-openjdk-devel java-${JAVA_VERSION}-openjdk-devel.i686; \
-    fi
+RUN yum install -y java-${JAVA_VERSION}-openjdk-devel && \
+    yum -y clean all
+
 # maven
 ENV MAVEN_VERSION 3.5.3
 RUN curl -f -L https://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar -C /opt -xzv
@@ -39,7 +30,7 @@ ENV PATH ${PATH}:/opt/ant/bin
 
 # Set JDK to be 32bit
 COPY set_java $M2
-RUN if [ "x${JAVA_VERSION}" = "x17" ]; then \
+RUN if [ "x${JAVA_VERSION}" = "x17" ] || [ "x${JAVA_VERSION}" = "x21" ]; then \
       rm $M2/set_java; \
     else \
       $M2/set_java && rm $M2/set_java; \
