--- a/.github/workflows/build-podman.yaml
+++ b/.github/workflows/build-podman.yaml
@@ -205,7 +205,9 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "NODE_VERSION=20.15.1"
+        build-args: |
+          "NODE_VERSION=20.15.1"
+          "NEW_COREPACK=true"
   BuildNodeJs18:
     needs: BuildBase
     runs-on: ubuntu-22.04
@@ -239,7 +241,9 @@ jobs:
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
         ghcr-token: ${{ secrets.GHCR_TOKEN }}
-        build-args: "NODE_VERSION=20.15.1"
+        build-args: |
+          "NODE_VERSION=20.15.1"
+          "NEW_COREPACK=true"
 
   BuildDotnet:
     needs: BuildBase
