--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,7 +54,7 @@ jobs:
         context: go
         dockerfile: go/podman/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.20
+        tag-suffix: "-1.20"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -71,7 +71,7 @@ jobs:
         context: go
         dockerfile: go/podman/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.21
+        tag-suffix: "-1.21"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -88,7 +88,7 @@ jobs:
         context: go
         dockerfile: go/podman/Dockerfile
         image-name: builder-go
-        tag-suffix: -1.22
+        tag-suffix: "-1.22"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -214,7 +214,7 @@ jobs:
         context: nodejs
         dockerfile: nodejs/podman/Dockerfile
         image-name: builder-nodejs
-        tag-suffix: -18
+        tag-suffix: "-18"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -231,7 +231,7 @@ jobs:
         context: nodejs
         dockerfile: nodejs/podman/Dockerfile
         image-name: builder-nodejs
-        tag-suffix: -20
+        tag-suffix: "-20"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -267,7 +267,7 @@ jobs:
         context: dotnet
         dockerfile: dotnet/podman/Dockerfile
         image-name: builder-dotnet
-        tag-suffix: -6.0
+        tag-suffix: "-6.0"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
@@ -284,7 +284,7 @@ jobs:
         context: dotnet
         dockerfile: dotnet/podman/Dockerfile
         image-name: builder-dotnet
-        tag-suffix: -8.0
+        tag-suffix: "-8.0"
         platforms: linux/amd64,linux/arm64
         docker-namespace: ${{ secrets.DOCKER_HUB_USER }}
         docker-password: ${{ secrets.DOCKER_HUB_SECRETS }}
